--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: php
 php:
   - '7.2'
+before_script:
+  cp www/application/config/auth-dev.php www/application/config/auth.php
 script: php www/index.php tests TestLibrary
