--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,7 @@ php:
 before_script:
   cp www/application/config/auth-dev.php www/application/config/auth.php
 script: php www/index.php tests TestLibrary
+
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
