--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ php:
   - '7.2'
 before_script:
   cp www/application/config/auth-dev.php www/application/config/auth.php
+
+env:
+  -CODECOV_TOKEN="80f6b414-b912-419d-8fca-07e42b3ef5f5"
 script: php www/index.php tests TestLibrary
 after_success:
   - bash <(curl -s https://codecov.io/bash)
