--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: php
 php:
   - '7.2'
 before_script:
-  cp www/application/config/auth-dev.php www/application/config/auth.php
+  - cp www/application/config/auth-dev.php www/application/config/auth.php
+  -  cp www/application/config/database-dev.php www/application/config/database.php
 
 
 services: mysql
