--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,15 @@
 language: php
 php:
   - '7.2'
+services: mysql
+
 before_script:
   - cp www/application/config/auth-dev.php www/application/config/auth.php
   -  cp www/application/config/database-dev.php www/application/config/database.php
-
-
-services: mysql
-
-before_install:
   - mysql -e 'CREATE DATABASE bluetape;'
-
+  - mysql -u root -e "CREATE USER 'bluetape'@'localhost' IDENTIFIED BY 'bluetape';"
+  - mysql -u root -e "GRANT ALL ON bluetape.* TO 'bluetape'@'localhost';"
 
 script:
   - php www/index.php migrate
   - php www/index.php tests TestLibrary
-after_success: coveralls
