--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ before_script:
   - cp www/application/config/auth-dev.php www/application/config/auth.php
   -  cp www/application/config/database-dev.php www/application/config/database.php
   - mysql -e 'CREATE DATABASE bluetape;'
-  - mysql -e 'CREATE USER "travis'@'localhost";'
-  - mysql -e GRANT SELECT,INSERT,UPDATE,DELETE,CREATE,DROP ON *.* TO 'dev'@'localhost';
+  - mysql -e 'CREATE USER "root'@'localhost";'
+
 
 
 
