in the name of yesus

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,9 @@ services: mysql
 before_script:
   - cp www/application/config/auth-dev.php www/application/config/auth.php
   -  cp www/application/config/database-dev.php www/application/config/database.php
-  - mysql -e 'CREATE DATABASE bluetape;'
-  - mysql -e 'CREATE USER "root'@'localhost";'
-
-
+- mysql -u root --password="" < TestDB/travis.sql
 
 
 script:
-  - php www/index.php migrate
+
   - php www/index.php tests TestLibrary
