--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ services: mysql
 before_script:
   - cp www/application/config/auth-dev.php www/application/config/auth.php
   -  cp www/application/config/database-dev.php www/application/config/database.php
-- mysql -u root --password="" < TestDB/travis.sql
+
+  - mysql -u 'root --password=""' < test/travis.sql
 
 
 script:
