--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,20 @@
 language: php
 php:
-  - '7.1'
+  - '7.2'
 services: mysql
 
 before_script:
   - cp www/application/config/auth-dev.php www/application/config/auth.php
   -  cp www/application/config/database-dev.php www/application/config/database.php
-  - mysql -e 'CREATE DATABASE IF NOT EXISTS bluetape;'  
-  - mysql -u root --default-character-set=utf8 bluetape < TestDB/travis.sql
+  - mysql -e 'CREATE DATABASE IF NOT EXISTS bluetape;'
+  -  mysql -e "USE bluetape;
+    DROP TABLE IF EXISTS bluetape_userinfo;
+
+  create table bluetape_userinfo(
+      email varchar(128),
+      name varchar(256),
+      lastUpdate datetime
+  );
 
 
 script:
