--- a/.travis.yml
+++ b/.travis.yml
@@ -7,14 +7,14 @@ before_script:
   - cp www/application/config/auth-dev.php www/application/config/auth.php
   -  cp www/application/config/database-dev.php www/application/config/database.php
   - mysql -e 'CREATE DATABASE IF NOT EXISTS bluetape;'
-  -  mysql -e "USE bluetape;
+  -  mysql -e 'USE mysql;
     DROP TABLE IF EXISTS bluetape_userinfo;
 
   create table bluetape_userinfo(
       email varchar(128),
       name varchar(256),
       lastUpdate datetime
-  );
+  );'
 
 
 script:
