--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ before_script:
   - cp www/application/config/auth-dev.php www/application/config/auth.php
   -  cp www/application/config/database-dev.php www/application/config/database.php
   - mysql -e 'CREATE DATABASE IF NOT EXISTS bluetape;'
-  -  mysql -e 'USE bluetape;create table bluetape_userinfo(email varchar(128),name varchar(256),lastUpdate datetime);'
-  - mysql -e "USE bluetape; insert into bluetape_userinfo values ('7316081@student.unpar.ac.id' , 'JONATHAN LAKSAMANA PURNOMO' , '2019-02-25 09:48:20');"
+  -  mysql -e 'USE bluetape;create table Bluetape_Userinfo(email varchar(128),name varchar(256),lastUpdate datetime);'
+  - mysql -e "USE bluetape; insert into Bluetape_Userinfo values ('7316081@student.unpar.ac.id' , 'JONATHAN LAKSAMANA PURNOMO' , '2019-02-25 09:48:20');"
 
 
 script:
