--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_script:
   -  cp www/application/config/database-dev.php www/application/config/database.php
   - mysql -e 'CREATE DATABASE IF NOT EXISTS bluetape;'
   -  mysql -e 'USE bluetape;create table Bluetape_Userinfo(email varchar(128),name varchar(256),lastUpdate datetime);'
-  - mysql -e 'USE bluetape;create table Perubahankuliah(id int , requestByEmail varchar(256) , requestDateTime datetime , mataKuliahName varchar(256) , mataKuliahCode varchar(9),class varchar(1) , changeType varchar(1), fromDateTime datetime, fromRoom varchar(16), [to] varchar(1024), remarks varchar(256) , answer varchar(16), answeredByEmail varchar(256) ,answeredDateTime datetime , answeredMessage varchar(256) );'
+  -  mysql -e 'USE bluetape;create table Perubahankuliah(id int,requestByEmail varchar(256),requestDateTime datetime);'
   - mysql -e "USE bluetape;insert into Perubahankuliah (requestByEmail) values ('7316081@student.unpar.ac.id');"
   - mysql -e "USE bluetape; insert into Bluetape_Userinfo values ('7316081@student.unpar.ac.id' , 'JONATHAN LAKSAMANA PURNOMO' , '2019-02-25 09:48:20');"
 
