--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ before_script:
 
 script:
 - php www/index.php tests TestLibrary
-- php www/index.php tests TestModel
+- php www/index.php tests TestPerubahanKuliah
