--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ script:
 - php www/index.php tests TestLibrary
 - php www/index.php tests TestPerubahanKuliah
 - php www/index.php tests TestJadwalDosen
+- php www/index.php tests TestAuth
 
 after_success:
 - bash <(curl -s https://codecov.io/bash)
