--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_script:
   - mysql -e "USE bluetape;insert into PerubahanKuliah (requestByEmail) values ('7316081@student.unpar.ac.id');"
   - mysql -e "USE bluetape; insert into Bluetape_Userinfo values ('7316081@student.unpar.ac.id' , 'JONATHAN LAKSAMANA PURNOMO' , '2019-02-25 09:48:20');"
   - mysql -e "USE bluetape; insert into jadwal_dosen values('','jaki',1,1,1,'a','a','2019-02-25 09:48:20');"
+  - mysql -e "USE bluetape; insert into jadwal_dosen values('','jakii',1,1,1,'a','a','2019-02-25 09:48:20');"
 
 
 
