--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_script:
   -  mysql -e 'USE bluetape;create table jadwal_dosen (id int , user varchar(256), hari int , jam_mulai int , durasi int , jenis varchar(256) , label varchar(100) , lastUpdate datetime );'
   - mysql -e "USE bluetape;insert into PerubahanKuliah (requestByEmail) values ('7316081@student.unpar.ac.id');"
   - mysql -e "USE bluetape; insert into Bluetape_Userinfo values ('7316081@student.unpar.ac.id' , 'JONATHAN LAKSAMANA PURNOMO' , '2019-02-25 09:48:20');"
-  - mysql -e "USE bluetape; insert into jadwal_dosen values(1,'jaki',1,1,1,'a','a','2019-02-25 09:48:20');"
+  - mysql -e "USE bluetape; insert into jadwal_dosen values('','jaki',1,1,1,'a','a','2019-02-25 09:48:20');"
   - mysql -e "USE bluetape; insert into jadwal_dosen values('','jakii',1,1,1,'a','a','2019-02-25 09:48:20');"
 
 
