--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,4 @@ script:
 - php www/index.php tests TestPerubahanKuliah
 - php www/index.php tests TestJadwalDosen
 - php www/index.php tests TestAuth
+- php www/index.php tests TestTranskrip_model
