--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_script:
   -  mysql -e 'USE bluetape;create table Bluetape_Userinfo(email varchar(128),name varchar(256),lastUpdate datetime);'
   -  mysql -e 'USE bluetape;create table PerubahanKuliah(id int,requestByEmail varchar(256),requestDateTime datetime);'
   -  mysql -e 'USE bluetape;create table jadwal_dosen (id int , user varchar(256), hari int , jam_mulai int , durasi int , jenis varchar(256) , label varchar(100) , lastUpdate datetime );'
-  -  mysql -e 'USE bluetape;create table transkrip (id int,	requestByEmail varchar(128), requestDateTime datetime,requestType varchar(8),requestUsage varchar(256), answer varchar(16),answeredByEmail varchar(128),answeredDateTime datetime,answeredMessage varchar(256));'
+  -  mysql -e 'USE bluetape;create table Transkrip (id int,	requestByEmail varchar(128), requestDateTime datetime,requestType varchar(8),requestUsage varchar(256), answer varchar(16),answeredByEmail varchar(128),answeredDateTime datetime,answeredMessage varchar(256));'
   - mysql -e "USE bluetape;insert into PerubahanKuliah (requestByEmail) values ('7316081@student.unpar.ac.id');"
   - mysql -e "USE bluetape; insert into Bluetape_Userinfo values ('7316081@student.unpar.ac.id' , 'JONATHAN LAKSAMANA PURNOMO' , '2019-02-25 09:48:20');"
   - mysql -e "USE bluetape; insert into jadwal_dosen values('','jaki',1,1,1,'a','a','2019-02-25 09:48:20');"
