--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,10 @@ before_script:
   - mysql -e "USE bluetape; insert into Bluetape_Userinfo values ('7316081@student.unpar.ac.id' , 'JONATHAN LAKSAMANA PURNOMO' , '2019-02-25 09:48:20');"
   - mysql -e "USE bluetape; insert into jadwal_dosen values('','jaki',1,1,1,'a','a','2019-02-25 09:48:20');"
   - mysql -e "USE bluetape; insert into jadwal_dosen values('','jakii',1,1,1,'a','a','2019-02-25 09:48:20');"
-  - mysql -e "use bluetape; insert into Transkrip values('','dummyemail',strftime('%Y-%m-%d %H:%M:%S' , 'now'),'dummytype','tes')"
-  - mysql -e "use bluetape; insert into Transkrip values('','dummyemail',strftime('%Y-%m-%d %H:%M:%S', 'now'),'type1','tes','printed')"
-   - mysql -e "use bluetape; insert into Transkrip values('','dummyemail',strftime('%Y-%m-%d %H:%M:%S', 'now'),'type2','tes','printed')"
-    - mysql -e "use bluetape; insert into Transkrip values('','dummyemail',strftime('%Y-%m-%d %H:%M:%S', 'now'),'type3','tes','printed')"
+  - mysql -e "use bluetape; insert into Transkrip values('','dummyemail',convert(datetime,'18-06-12 10:34:09 PM',5),'dummytype','tes')"
+  - mysql -e "use bluetape; insert into Transkrip values('','dummyemail',convert(datetime,'18-06-12 10:34:09 PM',5),'type1','tes','printed')"
+   - mysql -e "use bluetape; insert into Transkrip values('','dummyemail',convert(datetime,'18-06-12 10:34:09 PM',5),'type2','tes','printed')"
+    - mysql -e "use bluetape; insert into Transkrip values('','dummyemail',convert(datetime,'18-06-12 10:34:09 PM',5),'type3','tes','printed')"
 
 
 
