--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,10 @@ before_script:
   - mysql -e "USE bluetape; insert into Bluetape_Userinfo values ('7316081@student.unpar.ac.id' , 'JONATHAN LAKSAMANA PURNOMO' , '2019-02-25 09:48:20');"
   - mysql -e "USE bluetape; insert into jadwal_dosen values('','jaki',1,1,1,'a','a','2019-02-25 09:48:20');"
   - mysql -e "USE bluetape; insert into jadwal_dosen values('','jakii',1,1,1,'a','a','2019-02-25 09:48:20');"
-  - mysql -e "USE bluetape; insert into Transkrip values('','dummyemail','2019-02-25 09:48:20','dummytype','tes','printed');"
-  - mysql -e "USE bluetape; insert into Transkrip values('','dummyemail','2019-02-25 09:48:20','type1','tes','printed');"
-  - mysql -e "USE bluetape; insert into Transkrip values('','dummyemail','2019-02-25 09:48:20','type2','tes','printed');"
-  - mysql -e "USE bluetape; insert into Transkrip values('','dummyemail','2019-02-25 09:48:20','type3','tes','printed');"
+  - mysql -e " insert into Transkrip values('','dummyemail','2019-02-25 09:48:20','dummytype','tes','printed');"
+  - mysql -e " insert into Transkrip values('','dummyemail','2019-02-25 09:48:20','type1','tes','printed');"
+  - mysql -e " insert into Transkrip values('','dummyemail','2019-02-25 09:48:20','type2','tes','printed');"
+  - mysql -e " insert into Transkrip values('','dummyemail','2019-02-25 09:48:20','type3','tes','printed');"
 
 
 
